Feat: Login & Signup Screens UI & Form Validations

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.17",
+    "@hookform/resolvers": "^3.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -30,6 +31,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-hands": "^1.0.5",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-reveal": "^1.2.2",
     "react-router": "^6.10.0",
